Добавил и стилизовал footer карты

--- a/_include/footer.html
+++ b/_include/footer.html
@@ -1,5 +1,51 @@
 	<footer>
-
+    <div class="top-footer">
+      <div class="top-footer__container">
+        <div class="top-footer__row">
+          <section class="footer-navigation">
+            <h3 class="footer-navigation__title">About us</h3>
+            <ul class="footer-navigation__list">
+              <li class="footer-navigation__item"><a href="#">About us</a></li>
+              <li class="footer-navigation__item"><a href="#">Range</a></li>
+              <li class="footer-navigation__item"><a href="#">Partnership</a></li>
+              <li class="footer-navigation__item"><a href="#">Contact</a></li>
+            </ul>
+          </section>
+          <section class="footer-navigation">
+            <h3 class="footer-navigation__title">Legal information</h3>
+            <ul class="footer-navigation__list">
+              <li class="footer-navigation__item"><a href="#">About us</a></li>
+              <li class="footer-navigation__item"><a href="#">Range</a></li>
+              <li class="footer-navigation__item"><a href="#">Partnership</a></li>
+              <li class="footer-navigation__item"><a href="#">Contact</a></li>
+            </ul>
+          </section>
+          <section class="footer-navigation">
+            <h3 class="footer-navigation__title">Schedule</h3>
+            <ul class="footer-navigation__list">
+              <li class="footer-navigation__item"><a href="#">About us</a></li>
+              <li class="footer-navigation__item"><a href="#">Range</a></li>
+              <li class="footer-navigation__item"><a href="#">Partnership</a></li>
+              <li class="footer-navigation__item"><a href="#">Contact</a></li>
+            </ul>
+          </section>
+          <section class="footer-navigation">
+            <h3 class="footer-navigation__title">Contact</h3>
+            <ul class="footer-navigation__list">
+              <li class="footer-navigation__item"><a href="#">About us</a></li>
+              <li class="footer-navigation__item"><a href="#">Range</a></li>
+              <li class="footer-navigation__item"><a href="#">Partnership</a></li>
+              <li class="footer-navigation__item"><a href="#">Contact</a></li>
+            </ul>
+          </section>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="footer-bottom__container">
+        <span class="copyright">Ⓒ freshfood.com 2017</span>
+      </div>
+    </div>
 	</footer>
 	<script src="js/script.js"></script>
 </body>
