--- a/less/global.less
+++ b/less/global.less
@@ -54,3 +54,16 @@ a:hover {
   max-width: 650px;
   margin: 0 auto 40px;
 }
+
+.btn {
+  background: @color-main;
+  text-transform: uppercase;
+  color: @white;
+  cursor: pointer;
+  transition: @transition-time;
+
+  &:hover {
+    background: @white;
+    color: @color-main;
+  }
+}
