--- a/less/style.less
+++ b/less/style.less
@@ -19,3 +19,9 @@
 @import "block/about-us.less";
 @import "block/range.less";
 @import "block/partnership.less";
+@import "block/product.less";
+@import "block/map.less";
+@import "block/top-footer.less";
+@import "block/footer-navigation.less";
+@import "block/footer-bottom.less";
+@import "block/copyright.less";
