--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,6 +3,11 @@
   padding-bottom: 100px;
 }
 
+.footer-padding() {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 .img-responsive() {
 	display: block;
 	max-width: 100%;
