--- a/less/variables.less
+++ b/less/variables.less
@@ -34,11 +34,11 @@
 @font-size--h1:               80px;
 @font-size--h2:               32px;
 @font-size--h3:               24px;
-@font-size--h4:               1.25em;
+@font-size--h4:               20px;
 @font-size--h5:               1em;
 @font-size--h6:               1em;
 @font-size--small:            0.75em;
-@font-size--logo:              24px;
+@font-size--logo:             24px;
 
 // Ширины
 
